add sample with user

--- a/.env
+++ b/.env
@@ -1,2 +1,9 @@
 ENV=development
 PORT=3000
+
+DB_DIALECT=mysql
+DB_HOSTNAME=localhost
+DB_PORT=3306
+DB_USERNAME=root
+DB_PASSWORD=
+DB_DATABASE=sample
