--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "main": "./dist/cmd/http.js",
   "scripts": {
     "start": "node dist/cmd/http",
-    "start:dev": "nodemon --watch './src/**/*.ts' --exec 'ts-node' src/cmd/http.ts",
-    "build": "tsc",
+    "start:dev": "nodemon src/cmd/http.ts",
+    "build": "tsc -P ./tsconfig.build.json",
     "lint": "eslint --fix --quiet ./src/**/*.ts",
     "format": "prettier --write ./src/**/*.ts"
   },
@@ -14,8 +14,10 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@types/bcrypt": "^5.0.0",
     "@types/dotenv": "^8.2.0",
     "@types/express": "^4.17.13",
+    "@types/knex": "^0.16.1",
     "@types/node": "^17.0.21",
     "@typescript-eslint/eslint-plugin": "^5.12.1",
     "@typescript-eslint/parser": "^5.12.1",
@@ -24,10 +26,15 @@
     "eslint-plugin-prettier": "^4.0.0",
     "nodemon": "^2.0.15",
     "prettier": "^2.5.1",
-    "ts-node": "^10.5.0"
+    "ts-node": "^10.5.0",
+    "tsconfig-paths": "^3.12.0"
   },
   "dependencies": {
+    "bcrypt": "^5.0.1",
     "dotenv": "^16.0.0",
-    "express": "^4.17.3"
+    "express": "^4.17.3",
+    "knex": "^1.0.3",
+    "mysql2": "^2.3.3",
+    "pg": "^8.7.3"
   }
 }
