--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,8 +2,8 @@
   "compilerOptions": {
     "target": "es2016",
     "module": "commonjs",
-    "rootDir": "./src",
-    "baseUrl": "./src",
+    "rootDir": "./",
+    "baseUrl": "./",
     "typeRoots": ["./src/@types", "./node_modules/@types"],
     "sourceMap": true,
     "outDir": "./dist",
@@ -12,6 +12,10 @@
     "forceConsistentCasingInFileNames": true,
     "strict": true,
     "noImplicitAny": false,
-    "skipLibCheck": true
+    "skipLibCheck": true,
+    "alwaysStrict": true,
+    "paths": {
+      "src/*": ["./src/*"]
+    }
   }
 }
