--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@types/dotenv": "^8.2.0",
     "@types/express": "^4.17.13",
     "@types/knex": "^0.16.1",
+    "@types/moment": "^2.13.0",
     "@types/node": "^17.0.21",
     "@typescript-eslint/eslint-plugin": "^5.12.1",
     "@typescript-eslint/parser": "^5.12.1",
@@ -34,6 +35,7 @@
     "dotenv": "^16.0.0",
     "express": "^4.17.3",
     "knex": "^1.0.3",
+    "moment": "^2.29.2",
     "mysql2": "^2.3.3",
     "pg": "^8.7.3"
   }
