--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "start": "node dist/cmd/http",
     "start:dev": "nodemon src/cmd/http.ts",
-    "build": "tsc -P ./tsconfig.build.json",
+    "build": "tsc -p tsconfig.build.json",
     "build:docs": "apidoc -c apidoc.json -t docs/template -i src/internal/handlers/http -o docs/out",
     "lint": "eslint --fix --quiet ./src/**/*.ts",
     "format": "prettier --write ./src/**/*.ts",
@@ -36,7 +36,8 @@
     "prettier": "^2.5.1",
     "rimraf": "^3.0.2",
     "ts-node": "^10.5.0",
-    "tsconfig-paths": "^3.12.0"
+    "tsconfig-paths": "^3.12.0",
+    "typescript": "^4.6.3"
   },
   "dependencies": {
     "bcrypt": "^5.0.1",
